# financial-ai-engineering-showcase

./: .gitignore  README.md  pyproject.toml
notebooks/week_01_fundamentals/: 06_project_pdf_analyst.ipynb
notebooks/week_02_llm_rag/: 06_project_10k_analyzer.ipynb
notebooks/week_03_ml_basics/: 06_project_demand_forecasting.ipynb
notebooks/week_04_quant/: 06_project_risk_dashboard.ipynb
notebooks/week_05_time_series/: 06_project_volatility_forecaster.ipynb
notebooks/week_06_agents/: 06_project_autonomous_analyst.ipynb
notebooks/week_07_finetuning/: 02_local_finetuning.ipynb
notebooks/week_08_mlops/: 06_project_cloud_deploy.ipynb  Dockerfile.prod  app.py  entrypoint.sh  requirements_prod.txt
notebooks/week_09_graphs/: 04_fraud_detection.ipynb
notebooks/week_10_algotrading/: 06_project_trading_bot.ipynb
notebooks/week_11_capstone/: hedge_fund.py
